--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactour",
   "version": "1.15.1",
   "description": "Tourist Guide into your React Components",
-  "main": "dist/reactour.cjs.js",
+  "main": "dist/reactour.js",
   "module": "dist/reactour.esm.js",
   "scripts": {
     "prepare": "npm run lib",
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "3.1.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "postcss": "^8.3.0",
     "prettier": "1.19.1",
     "react": "^16.8",
     "react-dom": "^16.8",
@@ -67,8 +68,8 @@
     "rollup": "1.27.8",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-filesize": "6.2.1",
-    "rollup-plugin-import-css": "^2.0.1",
     "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "style-loader": "1.0.1",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
