--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reactour",
-  "version": "1.15.1",
-  "description": "Tourist Guide into your React Components",
+  "name": "reactour-css-only",
+  "version": "1.0.2",
+  "description": "Tourist Guide into your React Components (With No Styled Components Dependency!)",
   "main": "dist/reactour.js",
   "module": "dist/reactour.esm.js",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elrumordelaluz/reactour.git"
+    "url": "git+https://github.com/babzcraig/reactour.git"
   },
   "keywords": [
     "react",
@@ -35,12 +35,12 @@
     "dist",
     "README.md"
   ],
-  "author": "Lionel T <elrumordelaluz@hotmail.com> (https://elrumordelaluz.com/)",
+  "author": "Babs Craig",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/elrumordelaluz/reactour/issues"
+    "url": "https://github.com/babzcraig/reactour/issues"
   },
-  "homepage": "https://github.com/elrumordelaluz/reactour#readme",
+  "homepage": "https://github.com/babzcraig/reactour#readme",
   "devDependencies": {
     "@babel/cli": "7.7.5",
     "@babel/core": "7.7.5",
@@ -68,6 +68,7 @@
     "rollup": "1.27.8",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-filesize": "6.2.1",
+    "rollup-plugin-import-css": "^2.0.1",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "style-loader": "1.0.1",
